docs: add routes section to app documentation
Add a new "Routes" section to both deliveryman and customer app documentation pages. This provides a comprehensive list of all available routes with their paths and parameters, improving developer reference and navigation clarity within the applications. The change also includes updating the navigation sidebar and a minor wording adjustment in the deliveryman app description.

--- a/source/pages/customer-app.html
+++ b/source/pages/customer-app.html
@@ -47,6 +47,7 @@
         <a href="#maps-api">Maps API Keys</a>
         <a href="#features">Core Features</a>
         <a href="#architecture">Architecture</a>
+        <a href="#routes">Routes</a>
         <a href="#structure">Project Structure</a>
         <a href="#run">Run and Debug</a>
         <a href="#build">Build and Release</a>
@@ -215,6 +216,53 @@ flutterfire configure</pre>
           <div>ThemeLocalizationWrapper and GlobalOverlayWrapper</div>
           <div>Firebase initialized in main with NotificationHelper</div>
           <div>Error handling via Catcher2 (debug/release configs)</div>
+        </div>
+      </div>
+
+      <h2 id="routes">Routes</h2>
+      <div class="section">
+        <div class="list">
+          <div>Shell: Dashboard</div>
+          <div>Home: /home</div>
+          <div>Menu: /menu</div>
+          <div>Cart: /cart</div>
+          <div>Offers: /offers?tab=0..n</div>
+          <div>Account: /account</div>
+          <div>Splash: /splash</div>
+          <div>Onboarding: /onboarding_screen</div>
+          <div>Search Result: /search_result?filters=&amp;query=</div>
+          <div>Login: /login</div>
+          <div>Forget Password Login: /forget_login</div>
+          <div>Set Up Password: /set_up_password?uniqueIdentifier=&amp;otp=</div>
+          <div>Verification: /verification?uniqueIdentifier=&amp;isFromOtp=</div>
+          <div>Edit Profile: /edit_profile</div>
+          <div>Contact Us: /contact_us</div>
+          <div>Terms &amp; Condition: /terms_and_condition</div>
+          <div>Privacy Policy: /privacy_policy</div>
+          <div>Refund Policy: /refund_policy</div>
+          <div>FAQ: /faq</div>
+          <div>Settings: /settings</div>
+          <div>Settings → Setup Password: /settings/settings_setup_password?isUpdated=</div>
+          <div>Notification: /notification</div>
+          <div>Wishlist: /wishlist</div>
+          <div>Wallet: /wallet</div>
+          <div>Loyalty Point: /loyalty_point</div>
+          <div>Referral: /referral</div>
+          <div>Checkout: /checkout</div>
+          <div>Checkout → Update Delivery Info: /checkout/update_delivery_info</div>
+          <div>Checkout → Address: /checkout/checkout_address?address=&amp;showDeliveryArea=</div>
+          <div>Checkout → Personal Info: /checkout/personal_info</div>
+          <div>Payment: /payment?amount=</div>
+          <div>My Orders: /my_orders</div>
+          <div>My Orders → Details: /my_orders/order_details?data=&amp;orderId=&amp;isTrack=</div>
+          <div>Order Confirmation: /order_confirmation?orderId=&amp;readableId=&amp;phone=&amp;countryDialCode=</div>
+          <div>Chat: /chat</div>
+          <div>Chat → Conversation: /chat/conversation?chatName=&amp;chatId=&amp;imageUrl=&amp;isBusiness=</div>
+          <div>File Viewer: /file_viewer?data=&amp;initialIndex=</div>
+          <div>About Us: /about_us</div>
+          <div>Select Location: /select_location</div>
+          <div>Recommended View All: /recommended_view_all</div>
+          <div>WebView: /webview?data=</div>
         </div>
       </div>
 
